Update 'sznbi7lnd-python' component image to: quay.io/rhtap_qe/rhtap-qe-python:cf019822922abba2532818b1e8ef52b92d367167@sha256:7459a6fe96fcf4ca6ae6dd1bdb44a6ce9d1be4096bc3b16ac2418a459afb4bee

--- a/components/sznbi7lnd-python/overlays/development/deployment-patch.yaml
+++ b/components/sznbi7lnd-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: sznbi7lnd-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-python:cf019822922abba2532818b1e8ef52b92d367167@sha256:7459a6fe96fcf4ca6ae6dd1bdb44a6ce9d1be4096bc3b16ac2418a459afb4bee
+          name: container-image
